add logout test

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,4 @@
 markers =
     login: mark a test as a login test
     login_locked: mark a test as a login test for locker user
-    something: something
+    logout: login and logout
