--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ markers =
     login: mark a test as a login test
     login_locked: mark a test as a login test for locker user
     logout: login and logout
+    login_with_variable: login_with_variable with env
