--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,6 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install Playwright browsers
-      run: playwright install
-
     - name: Create virtual environment
       run: python -m venv venv
 
@@ -33,6 +30,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Install Playwright browsers
+      run: |
+        pip install pytest-playwright
+        playwright install
+      
     - name: Run tests
       run: |
         pytest
