--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,27 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+  test:
+
+    needs: build
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+      
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+
+    - name: Activate virtual environment
+      run: source venv/bin/activate
+
     - name: Install Playwright browsers
       run: |
         pip install pytest-playwright
         playwright install
-      
-    - name: Run tests
-      run: |
-        pytest
+
+    - name: Run
